add delete and create platform and documentation
