# routes/PlatformsRoute.go
@@ -7,4 +7,6 @@ import (
 
 func SetupPlatformsRoutes(r *gin.Engine) {
 	r.GET("/api/platforms", services.GetPlatforms)
+	r.POST("/api/platforms", services.CreatePlatform)
+	r.DELETE("/api/platforms/:id", services.DeletePlatform)
 }
